2010-01-16  vadim  <vadim@vk.crocodile.org>

	* FWCmdAddObject.cpp (FWCmdAddObject::redo): fixes #1088
	"duplicate objects on redo". Click on the last line in undo stack
	view created duplicate objects in the tree if some undo/redo
	commands created new objects.

	* ObjectManipulator_create_new.cpp (ObjectManipulator::newInterfaceAddress):
	fixes #1090: extra undo command added to the stack on "New address"

	* FWWindow.cpp (FWWindow::event): If user opens two data files
	with the same names but located in different directories, titles
	of the subwindows, the list in the main Windows menu and entries
	in the recently opened files list will display full path. See #936

	* FWWindow.cpp (FWWindow::fileOpen, FWWindow::alreadyOpened): The
	GUI should not let the user open the same data file twice. If user
	tries to do this, even using different (e.g. relative) path, the
	program will instead activate project window that already holds
	this file. Still can not open the same data file in two
	subwindows. See #396

2010-01-15  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (PolicyCompiler_ipt::compile): Using rule
	processor Compiler::checkForObjectsWithErrors to find objects with
	errors and generate proper calls to abort(). This exposes errors
	that happened when Preprocessor failed to resolve compile-time
	AddressTable and DNSName objects. If compiler runs in test mode,
	preprocessor did not abort but used dummy substitution addresses
	and continued. Call to checkForObjectsWithErrors generates proper
	error messages tied to rules. Using this rule processor in all
	compilers. Fixes #1087

	* PolicyCompiler_ipt.cpp (processMultiAddressObjectsInRE::processNext):
	fixes #1086: incorrect processing of run time address tables.
	SourceForge bug 2932680. Rules with two run-time AddressTable
	objects in the same rule element (source or destination) were
	converted to the shell script that read addresses from the address