@@ -1,3 +1,11 @@
+2010-01-17  vadim  <vadim@vk.crocodile.org>
+
+	* instDialog_ui_ops.cpp (instDialog::checkIfNeedToInstall):
+	Regression: fixed #1092 "missing "install" checkboxes in the list
+	of firewalls on the first page of the installer
+	wizard". Checkboxes "install" disappeared randomly from the first
+	page of the installer wizard.
+
 2010-01-16  vadim  <vadim@vk.crocodile.org>
 
 	* FWCmdAddObject.cpp (FWCmdAddObject::redo): fixes #1088
